fixed gallery alignment

--- a/style.css
+++ b/style.css
@@ -5,22 +5,23 @@ body {
   color: chartreuse;
 }
 
-img {
+#banner {
   width: 100%;
   height: auto;
-  margin-left: 5px;
-  justify-content: center;
+  margin: auto;
 }
 
 #app-name {
   text-shadow: 2px 2px gray;
   border: 1px solid chartreuse;
   margin: 0 auto;
+  margin-top: 10px;
   width: 100%;
   max-width: 900px;
   background: white;
   font-family: 'Press Start 2P', cursive;
   padding: 10px 10px 10px 10px;
+  color: black
 }
 
 #intro {
@@ -43,9 +44,9 @@ img {
 
 #search-button {
   font-family: 'Press Start 2P', cursive;
-  border: 1px solid black;
+  border: 1px solid white;
   padding: 10px 10px 10px 10px;
-  background-color: chartreuse;
+  background-color:chartreuse;
   margin: 10px;
 }
 
@@ -56,14 +57,15 @@ img {
 
 .container {
   display: flex;
-  justify-content: center;
+  justify-content:center;
   margin-top: 10px;
   margin: 0 auto;
   flex-wrap: wrap;
+  flex-direction: row;
 }
 
 #image-data {
-  margin: 10px -5px 20px -5px;
+  margin: 10px 0px 20px 0px;
   box-sizing: border-box;
   background-size: cover;
   background-position: center;
@@ -71,8 +73,12 @@ img {
   width: 50%;
 }
 
+#image-data img {
+  border: 1px solid chartreuse;
+}
+
 #search-data {
-  margin: 10px -5px 20px -5px;
+  margin: 10px 0px 20px 0px;
   box-sizing: border-box;
   width: 40%;
   height: 300px;
@@ -81,6 +87,18 @@ img {
   padding-left: 10px;
   font-family: 'Jura', sans-serif;
   color: chartreuse;
+}
+
+.gallery-container img {
+  width: 45%;
+  border: 1px solid chartreuse;
+  margin: 10px 10px 10px 10px;
+}
+
+.gallery-container {
+  width: 100%;
+  overflow: auto;
+  margin: auto;
 }
 
 footer {
